Color contrast and font size fixes

--- a/styles/after-events.css
+++ b/styles/after-events.css
@@ -21,5 +21,5 @@
 }
 .events time,
 .events p {
-  font-size: 14px;
+  font-size: 0.875rem;
 }
