--- a/styles/after-main.css
+++ b/styles/after-main.css
@@ -15,16 +15,16 @@ body {
 }
 
 a {
-  color: green;
+  color: #006100;
   text-decoration: none;
-  border-bottom: 1px dotted green;
+  border-bottom: 1px dotted #006100;
 }
 
 a:hover,
 a:focus {
-  color: darkgreen;
+  color: #005200;
   text-decoration: none;
-  border-bottom: 1px solid darkgreen;
+  border-bottom: 1px solid #005200;
 }
 
 /*
@@ -94,7 +94,7 @@ p {
   padding: 15px;
   text-decoration: none;
   color: #fff;
-  background-color: green;
+  background-color: #006100;
   border-bottom: none;
 }
 
@@ -117,7 +117,7 @@ header {
 .box {
   padding: 1rem;
   border: 1px solid #f1f1f1;
-  border-top: 5px solid green;
+  border-top: 5px solid #006100;
   margin-bottom: 1rem;
   margin-top: 2rem;
   background: #f9f9f9;
@@ -130,16 +130,16 @@ header {
 
 .btn-success,
 .btn-primary {
-  background-color: green;
-  border-color: green;
+  background-color: #006100;
+  border-color: #006100;
 }
 
 .btn-success:hover,
 .btn-success:focus,
 .btn-primary:hover,
 .btn-primary:focus {
-  background-color: darkgreen;
-  border-color: darkgreen;
+  background-color: #005200;
+  border-color: #005200;
 }
 
 table {
